# bonsai-starter-template

./: .gitignore  .licenserc.json  .solhint.json  Cargo.toml  README.md  package.json
cli/: Cargo.toml
contracts/: .solhint.json  Cargo.toml  build.rs  package-lock.json  package.json
contracts/contracts/: HelloBonsai.sol  IBonsaiProxy.sol
contracts/contracts/test/: MockBonsaiProxy.sol
contracts/src/: lib.rs
contracts/tests/: contract_tests.rs
contracts/tests/contract_tests/: main.rs  utils.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
