[workspace]
members = [
    "contracts",
    "methods",
    "cli",
]

[profile.release]
opt-level = 3

[workspace.dependencies]
# TODO(victor): Select the most appropriate RISC Zero version.
risc0-zkp = { git = "https://github.com/risc0/risc0.git", rev = "754b89ebb3ebdfe3242e065620c66c6f1a4afc5a" }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", rev = "754b89ebb3ebdfe3242e065620c66c6f1a4afc5a" }
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "754b89ebb3ebdfe3242e065620c66c6f1a4afc5a" }
hello-bonsai-methods = { path = "methods" }
