[package]
name = "hello-bonsai-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "1.0", features = ["ws", "rustls"] }
# hello-bonsai-methods = { ... }

[build-dependencies]
ethers-solc = { version = "1.0", features = ["full"] }

# [dev-dependencies]
# rand = "0.8.5"
# tokio = "1.24.1"
