[package]
name = "hello-bonsai-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
# Must match RISC Zero version specified in the project root.
risc0-build = { git = "https://github.com/risc0/risc0.git", rev = "754b89ebb3ebdfe3242e065620c66c6f1a4afc5a" }

[dependencies]
# NOTE: ethabi is used instead of ethers because risc0 v0.13 does not support getrandom.
ethabi = { version = "18.0", default-features = false }
# Must match RISC Zero version specified in the project root.
risc0-zkvm = { version = "0.13", default-features = false }

[profile.release]
lto = true
opt-level = 3
