[package]
name = "hello-bonsai-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[build-dependencies]
# Must match RISC Zero version specified in the project root.
risc0-build = { version = "0.13" }

[dependencies]
# TODO(victor): Switch to using ethers when getrandom becomes supported before.
ethabi = { version = "18.0", default-features = false }
# Must match RISC Zero version specified in the project root.
risc0-zkvm = { version = "0.13", default-features = false }

[profile.release]
lto = true
opt-level = 3
